--- a/styles/main.css
+++ b/styles/main.css
@@ -437,7 +437,7 @@ html {
   background-image: url("/assets/images/project-2.png");
 }
 .nuone-projects-container .projects .project-3 {
-  background-image: url("/assets/images/project-3.png");
+  background-image: url("/assets/images/Gym.png");
 }
 .nuone-projects-container .projects .project-4 {
   background-image: url("/assets/images/project-2.png");
