--- a/styles/main.scss
+++ b/styles/main.scss
@@ -551,7 +551,7 @@ html {
         }
 
         .project-3 {
-            background-image: url('/assets/images/project-3.png');
+            background-image: url('/assets/images/Gym.png');
         }
 
         .project-4 {
