--- a/styles/responsive.scss
+++ b/styles/responsive.scss
@@ -1,3 +1,4 @@
+@import 'variables';
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap');
 
@@ -40,6 +41,17 @@ html {
         .footer {
             >span {
                 margin: auto;
+            }
+        }
+    }
+
+    //dev note
+    .nuone-dev-note {
+        padding: 10px;
+
+        h3 {
+            .dev-note-sp {
+                font-size: 18px !important;
             }
         }
     }
