--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap");
 *,
 ::before,
 ::after {
@@ -641,6 +644,33 @@ html {
   position: fixed;
   transition: all ease-in-out 0.2s;
   right: 20px !important;
+}
+
+.nuone-dev-note {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  border: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  backdrop-filter: blur(5px);
+  padding: 20px;
+}
+.nuone-dev-note .dev-note h3 {
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+}
+.nuone-dev-note .dev-note h3 .dev-note-sp {
+  font-weight: bold;
+  text-decoration: none;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 20px;
 }
 
 /*# sourceMappingURL=main.css.map */
