--- a/styles/main.scss
+++ b/styles/main.scss
@@ -695,9 +695,10 @@ html {
             line-height: normal;
             margin-top: 18px;
 
-            span {
+            span, a {
                 color: #000;
                 font-weight: 700;
+                text-decoration: none;
             }
         }
 
@@ -805,6 +806,7 @@ html {
     justify-content: center;
     backdrop-filter: blur(5px);
     padding: 20px;
+    z-index: 999;
 
     .dev-note {
         h3 {
