--- a/styles/main.scss
+++ b/styles/main.scss
@@ -238,7 +238,7 @@ html {
                 .hero-sub-2 {
                     display: flex;
                     align-items: center;
-                    justify-content: flex-end;
+                    justify-content: flex-start;
                     column-gap: 10px;
 
                     h3 {
