--- a/styles/main.css
+++ b/styles/main.css
@@ -186,7 +186,7 @@ html {
 .nuone-hero-container .hero-overlay .hero .hero-sub .hero-sub-2 {
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: flex-start;
   column-gap: 10px;
 }
 .nuone-hero-container .hero-overlay .hero .hero-sub .hero-sub-2 h3 {
