--- a/styles/main.css
+++ b/styles/main.css
@@ -421,6 +421,7 @@ html {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  margin-bottom: 10px;
 }
 .nuone-projects-container .projects .project .project-txt p {
   color: rgba(87, 87, 87, 0.44);
@@ -429,6 +430,17 @@ html {
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+}
+.nuone-projects-container .projects .project .project-txt a {
+  background-color: #0071E3;
+  color: #ffffff;
+  border: none;
+  padding: 7px 17px;
+  border-radius: 50px;
+  text-decoration: none;
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
 }
 .nuone-projects-container .projects .project:not(:last-child) {
   margin-right: 25px;
@@ -443,7 +455,10 @@ html {
   background-image: url("/assets/images/Gym.png");
 }
 .nuone-projects-container .projects .project-4 {
-  background-image: url("/assets/images/project-2.png");
+  background-image: url("/assets/images/ned-site.webp");
+}
+.nuone-projects-container .projects .project-5 {
+  background-image: url("/assets/images/bluelanka-site.webp");
 }
 
 .nuone-dark-container {
@@ -567,7 +582,8 @@ html {
   line-height: normal;
   margin-top: 18px;
 }
-.nuone-touch-container .touch p span, .nuone-touch-container .touch p a {
+.nuone-touch-container .touch p span,
+.nuone-touch-container .touch p a {
   color: #000;
   font-weight: 700;
   text-decoration: none;
