--- a/styles/main.css
+++ b/styles/main.css
@@ -460,6 +460,9 @@ html {
 .nuone-projects-container .projects .project-5 {
   background-image: url("/assets/images/bluelanka-site.webp");
 }
+.nuone-projects-container .projects .project-6 {
+  background-image: url("/assets/images/gbda-site.webp");
+}
 
 .nuone-dark-container {
   background-color: #1E1E1E;
