--- a/styles/main.scss
+++ b/styles/main.scss
@@ -575,6 +575,10 @@ html {
         .project-5 {
             background-image: url('/assets/images/bluelanka-site.webp');
         }
+
+        .project-6 {
+            background-image: url('/assets/images/gbda-site.webp');
+        }
     }
 }
 
