--- a/styles/main.css
+++ b/styles/main.css
@@ -317,6 +317,7 @@ html {
   border-radius: 17.117px;
   background: #FFF;
   box-shadow: 1.902px 3.804px 11.411px 0px rgba(0, 0, 0, 0.08);
+  min-height: 225px;
 }
 .nuone-tech-container .techs .tech h2 {
   color: #409EC8;
