--- a/styles/main.css
+++ b/styles/main.css
@@ -509,6 +509,7 @@ html {
   border: 1px solid #434343;
   border-radius: 24px;
   flex: 1;
+  min-height: 230px;
 }
 .nuone-dark-container .dark .icon > div {
   border: 1px solid #434343;
