--- a/styles/main.scss
+++ b/styles/main.scss
@@ -630,6 +630,7 @@ html {
             border: 1px solid #434343;
             border-radius: 24px;
             flex: 1;
+            min-height: 230px;
 
             >div {
                 border: 1px solid #434343;
